# GasDetectorSim

./: CMakeLists.txt  MUSIC.cc  README.md  multithreading.sh  physics.mac  run.mac  vis.mac
GasFile/: alpha.txt  ar_90_ch4_10_760Torr.gas  ar_90_ch4_10_O2_100ppm_830mbar.gas  ar_90_ch4_10_O2_20ppm.gas  ar_90_ch4_10_O2_20ppm_830mbar.gas  ar_90_ch4_10_O2_300ppm.gas  ar_90_ch4_10_O2_500ppm.gas  gas.gas
include/: GarfieldDetectorConstruction.hh  GarfieldEventAction.hh  GarfieldG4FastSimulationModel.hh  GarfieldPhysics.hh
src/: GarfieldDetectorConstruction.cc  GarfieldEventAction.cc  GarfieldG4FastSimulationModel.cc  GarfieldPhysics.cc  GarfieldPhysicsList.cc  GarfieldPrimaryGeneratorAction.cc  GarfieldRunAction.cc  GarfieldSteppingAction.cc
